--- a/djangox/templates/pages/dashboard.html
+++ b/djangox/templates/pages/dashboard.html
@@ -18,7 +18,7 @@
             <blockquote cite="https://www.brainyquote.com/quotes/robert_kiyosaki_626885">
               The richest people in the world look for and build networks; everyone else looks for work.
               <br>
-              -- Robery Kiyiosaki
+              -- Robert Kiyosaki
             </blockquote>
           </li>
             <!-- <ul class="list-unstyled mt-3 mb-3 ml-5">
