--- a/djangox/templates/account/login.html
+++ b/djangox/templates/account/login.html
@@ -1,6 +1,7 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
-
+{%load socialaccount%}
+{%providers_media_js%}
 {% block title %}Log in{% endblock %}
 
 {% block content %}
