--- a/djangox/templates/pages/about.html
+++ b/djangox/templates/pages/about.html
@@ -23,14 +23,11 @@ in the open market.  Of course one does not have to wait until one has no other
 coins before purchasing more if they desire to.</p>
 <p>Every user will have the opportunity to create and produce one million (1,000,000) crypto
   coins by the time they complete the 12 steps.  That's 83,333 for every step completed!</p>
-  <p>Come learn with us!  Rightside has put the 'earn' in learn!</p>
+  <p>Come learn with us!  Rightside Two.0 has put the 'earn' in learn!</p>
   <p>The block is not mined until the goal is completed!</p>
   <p>Our philosophy here is that if this is an immutable data structure, it should be made with care and necessarily some time.
   Our proof-of-work is not a random puzzle solved by the computer, but those specific tasks
-that the user has taken.  Where Bitcoin handles proof-of-work with random nonce values to create a hash with a
-certain number of leading characters like zeros, our equivalent is our users taking certain &
-specific steps in order to achieve their goals.  Once their goal is acheived and their block mined,
-they will have 83,333 coins rewarded to them for their efforts.</p>
+that the user has taken.  Where Bitcoin handles proof-of-work with random nonce values to create a hash with a certain number of leading characters like zeros, our equivalent is our users taking certain & specific steps in order to achieve their goals.  Once their goal is acheived and their block mined, they will have 83,333 coins rewarded to them for their efforts.</p>
 </div>
 
 {% endblock content %}
