--- a/djangox/templates/pages/home.html
+++ b/djangox/templates/pages/home.html
@@ -22,17 +22,17 @@
   </div>
 
   <div class="container">
-    <p class="text-center text-white">There is never any fee & it is always free!  If you want to donate however, it is a great tax deduction.</p>
+    <p class="text-center text-white">If you want to donate it is a great tax deduction.</p>
   </div>
 
   <div class="container text-white">
     <div class="card-deck mb-3 text-center">
       <div class="card mb-4 shadow-sm bg-dark">
         <div class="card-header">
-          <h4 class="my-0 font-weight-normal">Free</h4>
+          <h4 class="my-0 font-weight-normal">Interested</h4>
         </div>
         <div class="card-body">
-          <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+          <h1 class="card-title pricing-card-title">$10 <small class="text-muted">/ mo</small></h1>
           <ul class="list-unstyled mt-3 mb-4">
             <li>Two Free mentors</li>
             <li>Free financial statements</li>
