--- a/djangox/blockchain/blockchain/blockchain_client/templates/make_transaction.html
+++ b/djangox/blockchain/blockchain/blockchain_client/templates/make_transaction.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/">Wallet Generator
+              <a class="nav-link" href="/">Account Generator
               </a>
             </li>
             <li class="nav-item active">
@@ -64,7 +64,7 @@
     <form id="transaction_form">
 
         <div class="row">
-          <label class="col-sm-2">Sender Address:</label>
+          <label class="col-sm-2">Account:</label>
           <div class="col-sm-10">
             <input type="text" name="sender_address" id="sender_address" rows="2" class="form-control">
 
@@ -72,25 +72,25 @@
         </div>
 
         <br>
-        
+
         <div class="row">
-          <label class="col-sm-2">Sender Private Key:</label>
+          <label class="col-sm-2">Secret Password:</label>
           <div class="col-sm-10">
             <input type="text" name="sender_private_key" id="sender_private_key" rows="2" class="form-control">
           </div>
         </div>
 
         <br>
-        
+
         <div class="row">
-          <label class="col-sm-2">Recipient Address:</label>
+          <label class="col-sm-2">Recipient Account:</label>
           <div class="col-sm-10">
             <input type="text" name="recipient_address" id="recipient_address" rows="2" class="form-control">
           </div>
         </div>
 
         <br>
-        
+
         <div class="row">
           <label class="col-sm-2">Amount to Send:</label>
           <div class="col-sm-10">
@@ -99,10 +99,10 @@
         </div>
 
         <br>
-        
+
         <div class="row">
           <div class="col-lg-12 text-center">
-            <input type="button" id="generate_transaction" class="btn btn-primary btn-lg" value="Generate Transaction">
+            <input type="button" id="generate_transaction" class="btn btn-primary btn-lg" value="Make Transfer">
           </div>
         </div>
 
@@ -128,7 +128,7 @@
             <form id="confirmation_transaction_form">
 
                 <div class="row">
-                  <label class="col-sm-12">Sender Address:</label>
+                  <label class="col-sm-12">Sender Account:</label>
                   <div class="col-sm-12">
                     <input type="text" name="sender_address" id="confirmation_sender_address" rows="2" class="form-control" readonly>
 
@@ -136,12 +136,12 @@
                 </div>
 
                 <div class="row">
-                  <label class="col-sm-12">Recipient Address:</label>
+                  <label class="col-sm-12">Recipient Account:</label>
                   <div class="col-sm-12">
                     <input type="text" name="recipient_address" id="confirmation_recipient_address" rows="2" class="form-control" readonly>
                   </div>
                 </div>
-                
+
                 <div class="row">
                   <label class="col-sm-12">Amount to Send:</label>
                   <div class="col-sm-12">
@@ -228,7 +228,7 @@
                 document.getElementById("transaction_signature").value = response["signature"];
 
                 $("#basicModal").modal('show');
-                
+
               },
               error: function(error){
                 console.log(error);
@@ -255,7 +255,7 @@
                 //reset both forms
                 $("#transaction_form")[0].reset();
                 $("#confirmation_transaction_form")[0].reset();
-                
+
                 //clean text boxes
                 $("#sender_address").val("");
                 $("#sender_private_key").val("");
@@ -264,7 +264,7 @@
 
                 $("#basicModal").modal('hide');
                 $("#success_transaction_modal").modal('show');
-                
+
               },
               error: function(error){
                 console.log(error);
